syntax="proto3";

package assfire.api.v1.services.tsp;
option go_package = "assfire.org/api/v1/services/tsp";

import "assfire/api/v1/model/optimization/transport/tsp.proto";
import "google/api/annotations.proto";

message SolveTspSyncRequest {
  assfire.api.v1.model.optimization.transport.TspTask task = 1;
}

message SolveTspSyncResponse {
  assfire.api.v1.model.optimization.transport.TspSolution solution = 1;
}

message SolveTspStreamingRequest {
  assfire.api.v1.model.optimization.transport.TspTask task = 1;
}

message SolveTspStreamingResponse {
  int32 progress = 1;
  bool finished = 2;
  string comment = 3;
  assfire.api.v1.model.optimization.transport.TspSolution solution = 4;
}

service TspService {
  rpc SolveTspSync(SolveTspSyncRequest) returns (SolveTspSyncResponse){
    option (google.api.http) = {
      post: "/v1/sync"
      body: "*"
    };
  };
  rpc SolveTspStreaming(SolveTspStreamingRequest) returns (stream SolveTspStreamingResponse) {
    option (google.api.http) = {
      post: "/v1/streaming"
      body: "*"
    };
  }
}